# projeto-final-2026-1

1-1_Carlos-Henrique-Souza-Bispo/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PULL_REQUEST.md  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  trilhas.md
1-1_Carlos-Henrique-Souza-Bispo/app/: __init__.py  agent.py  config.py  constants.py  main.py  model_service.py  monitoring.py  schemas.py  training.py
1-1_Carlos-Henrique-Souza-Bispo/app/static/: app.js  index.html  styles.css
1-1_Carlos-Henrique-Souza-Bispo/artifacts/: churn_model.joblib  metrics.json
1-1_Carlos-Henrique-Souza-Bispo/docs/: DATA_CARD.md  MODEL_CARD.md
1-1_Carlos-Henrique-Souza-Bispo/tests/: conftest.py  test_agent.py  test_api.py  test_schemas.py  test_training.py
